--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -656,6 +656,9 @@ h2.section-title{
 .hero-image{
   margin-bottom: 60px;
 }
+.hero-image img{
+  width: 100%;
+}
 .text-search h1{
   font-size: 22px;
 }
@@ -668,6 +671,9 @@ h2.section-title{
 }
 .search-content{
   margin-bottom: 80px;
+}
+.search-content .ticket-search{
+  position: unset;
 }
 .head-search-content{
   background: #f8f8f8;
@@ -854,6 +860,121 @@ h2.section-title{
   margin-right: 6px;
 }
 /* End Search Page */
+
+/* checkout */
+.checkout h1{
+  color: #333333;
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 40px;
+}
+.checkout h2{
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+.box-form{
+  border: 1px solid #dedede;
+  padding: 30px;
+  border-left: 3px solid #00afc7;
+}
+label{
+  font-weight: 600;
+}
+span.desc{
+  color: #c5c5c5;
+  line-height: 18px;
+  margin-top: 4px;
+}
+.label-bottom .form-group{
+  margin-bottom: 0px;
+}
+.action{
+  text-align: right;
+  margin-top: 40px;
+}
+.action button{
+  background-color: #00afc7;
+  color: #ffffff;
+  font-size: 16px;
+  padding: 8px 20px;
+  border-radius: 0px;
+  border: none;
+}
+.box-information-input{
+  margin-left: 70px;
+}
+.box-information-input .box-title{
+  background: #ababab;
+  padding: 20px;
+}
+.box-information-input .box-title h2{
+  margin-bottom: 5px;
+}
+.box-information-input .box-title p{
+  margin-bottom: 0px;
+  font-size: 13px;
+}
+.inner-information{
+  padding: 30px 20px 42px;
+  background-color: #dedede;
+}
+.inner-information p.name-train{
+  margin-bottom: 5px;
+  font-weight: 600;
+}
+.list-route ul{
+  padding-left: 30px;
+  position: relative;
+}
+.list-route ul::before{
+  content: '';
+  height: 56%;
+  width: 1px;
+  background: #ababab;
+  position: absolute;
+  left: 9px;
+  top: 16%;
+}
+.list-route li{
+  position: relative;
+  margin-bottom: 40px;
+}
+.list-route li:last-child{
+  margin-bottom: 0px;
+}
+.blok-train{
+  margin-bottom: 30px;
+}
+.list-route li::before{
+  content: '';
+  height: 10px;
+  width: 10px;
+  border: 2px solid #00b2ca;
+  border-radius: 50%;
+  position: absolute;
+  left: -25px;
+  display: inline-block;
+  top: 7px;
+}
+.list-route li.to::before{
+  background: #00b2ca;
+}
+.list-route li .block{
+  display: inline-block;
+  width: 49%;
+}
+.list-route li span{
+  display: block;
+}
+.list-route li span.boarding{
+  font-weight: 600;
+  line-height: 14px;
+}
+.list-route li span.date{
+  font-size: 12px;
+  color: #9c9c9c;
+}
+/* End checkout */
 
 /* Footer */
 ul{
