--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -876,6 +876,7 @@ h2.section-title{
   border: 1px solid #dedede;
   padding: 30px;
   border-left: 3px solid #00afc7;
+  margin-bottom: 30px;
 }
 label{
   font-weight: 600;
@@ -884,6 +885,7 @@ span.desc{
   color: #c5c5c5;
   line-height: 18px;
   margin-top: 4px;
+  font-size: 12px;
 }
 .label-bottom .form-group{
   margin-bottom: 0px;
@@ -973,6 +975,115 @@ span.desc{
 .list-route li span.date{
   font-size: 12px;
   color: #9c9c9c;
+}
+.modal.next .modal-content{
+  border-radius: 0px;
+}
+.modal.next .modal-body{
+  padding: 30px 25px;
+  background: #fffdf0;
+  border-top: 5px solid #0099b1;
+}
+.info-icon .desc{
+  margin-top: 15px;
+}
+.info-icon p{
+  color: #848484;
+  line-height: 20px;
+}
+.image-icon{
+  margin-top: 55px;
+}
+.modal.next .modal-footer{
+  border: none;
+}
+.modal.next .modal-footer button{
+  background: #00abc5;
+  border-radius: 0px;
+  font-weight: normal;
+  font-size: 14px;
+  border: none;
+  box-shadow: none;
+}
+a.link-a{
+  background: transparent;
+  border: none;
+  color: #00abc5;
+  font-size: 12px;
+  width: 56%;
+  text-align: left;
+}
+.warning-alert{
+  border: 1px solid #ffcc00;
+  border-left: 3px solid #ffcc00;
+  padding: 15px;
+  background: #ffffef;
+  position: relative;
+  margin-bottom: 30px;
+}
+.warning-alert .fa-exclamation-triangle{
+  position: absolute;
+  font-size: 28px;
+  color: #ffcc00;
+  top: 25px;
+}
+.warning-alert ul{
+  padding-left: 40px;
+}
+.warning-alert ul li{
+  margin-bottom: 0px;
+  color: #808080;
+}
+.priority,.price-list{
+  display: inline-block;
+}
+.box-form.price{
+  padding: 0px;
+  border-color: #bcbcbc;
+  border-left-color: #00afc7;
+}
+.box-form.price .price-list{
+  float: right;
+  font-weight: 600;
+}
+.box-form.price .name-of-train{
+  padding: 20px;
+  font-weight: 600;
+  font-size: 15px;
+}
+.box-form.price .name-of-train span.idr{
+  margin-right: 20px;
+}
+.box-form.price .footer-total{
+  background: #eaeaea;
+  padding: 20px;
+  border-top: 1px solid #bcbcbc;
+}
+.box-form.price .footer-total h1{
+  margin-bottom: 0px;
+}
+.box-form.price .footer-total .price-list{
+  font-size: 24px;
+}
+.mb-40{
+  margin-bottom: 40px;
+}
+.action.last button{
+  font-size: 14px;
+}
+.action.last span{
+  display: inline-block;
+  margin: 0px 10px;
+  font-size: 14px;
+  font-weight: 600;
+}
+.action.last button.btn-grey{
+  background: #eaeaea;
+  color: #00afc7;
+  font-size: 14px;
+}
+.action.last button.btn-blue{
+  color: #ffffff;
 }
 /* End checkout */
 
