--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1248,7 +1248,130 @@ ul.navigation li span.count{
 .hero-image.detail{
   margin-bottom: 0px;
 }
+.top-block{
+  margin-bottom: 30px;
+}
+.top-block a{
+  color: #00abc5;
+  font-size: 14px;
+}
+.top-block button{
+  float: right;
+  border: none;
+  background: #00abc5;
+  color: #ffffff;
+  font-size: 14px;
+  padding: 5px 20px;
+}
+.top-block button:hover{
+  background: #333333;
+  cursor: pointer;
+}
+.area-to{
+  margin-bottom: 15px;
+}
+.area-to .tujuan{
+  font-weight: 600;
+}
+.area-to .booking{
+  float: right;
+}
+.box-profile .fa-check-circle{
+  font-size: 24px;
+  color: #006600;
+  position: absolute;
+}
+.purchase-info{
+  display: inline-block;
+  padding-left: 40px;
+  vertical-align: middle;
+  position: relative;
+}
+.purchase-info p,
+.price-detail p{
+  margin-bottom: 0px;
+}
+.price-detail{
+  vertical-align: middle;
+  display: inline-block;
+  float: right;
+}
+.price-detail p{
+  font-weight: 600;
+}
+.price-detail a{
+  font-size: 13px;
+  color: #00abc5 !important;
+  cursor: pointer;
+}
+h4.title-box{
+  font-size: 18px;
+  color: #333333;
+}
+.purchase-info.details{
+  padding-left: 0px;
+  font-weight: 600;
+  display: block;
+}
+.purchase-info.details::before{
+  content: '';
+  width: 3px;
+  height: 20px;
+  background: #00abc5;
+  display: inline-block;
+  position: absolute;
+  left: -21px;
+  top: 2px;
+}
+.price-detail.block{
+  float: none;
+  display: block;
+}
+.price-detail.block .code{
+  color: #808080;
+}
+.price-detail.block .label{
+  display: block;
+  width: 18%;
+  text-align: center;
+  background: #006600;
+  color: #ffffff;
+  font-weight: normal;
+  font-size: 12px;
+  border-radius: 8px;
+}
+.price-detail.block a.link{
+  float: right;
+  position: relative;
+  top: -34px;
+  font-size: 14px;
+}
+.pricelist{
+  position: relative;
+  top: -20px;
+}
+.pricelist table{
+  margin-bottom: 30px;
+}
 /* End Detail Pesanan */
+.pricelist table tr td{
+  border-top: 0px;
+}
+.pricelist table tr td:first-child{
+  padding-left: 60px;
+}
+.pricelist table tr td:last-child{
+  text-align: right;
+  font-weight: 600;
+  padding-right: 25px;
+}
+.pricelist table tr.green td:last-child{
+  color: #006600;
+}
+.pricelist table tr.total td{
+  font-weight: 600;
+  font-size: 16px;
+}
 
 /* Footer */
 ul{
