--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+body{
+  background-color: #f8f8f8 !important;
+}
 ul.list-unstyled,
 ul.list-unstyled-coin{
   display: inline-block;
@@ -1268,7 +1271,9 @@ ul.navigation li span.count{
   cursor: pointer;
 }
 .area-to{
-  margin-bottom: 15px;
+  background: #ffffff;
+  margin-bottom: 0px;
+  padding: 20px;
 }
 .area-to .tujuan{
   font-weight: 600;
@@ -1388,7 +1393,7 @@ h4.title-box{
   box-shadow: none;
   border-radius: 0px;
   border: none;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
 }
 .no-shadow .purchase-info{
   padding-left: 0px;
@@ -1396,10 +1401,19 @@ h4.title-box{
 .no-shadow .price-detail{
   font-size: 18px;
 }
+.next-information{
+  padding: 20px;
+  background: #ffffff;
+}
 .next-information .clock,
 .next-information .dropdown {
   color: #848484;
   display: inline-block;
+}
+.next-information .fa-check-circle{
+  color: #006600;
+  vertical-align: middle;
+  font-size: 24px;
 }
 .next-information .clock span{
   padding-left: 10px;
@@ -1421,6 +1435,61 @@ h4.title-box{
   outline: none;
   box-shadow: none;
 }
+.content-bar.list-item .top-block{
+  margin-bottom: 15px;
+}
+.list-content{
+  margin-bottom: 20px;
+}
+.load-footer p{
+  margin-bottom: 0px;
+  color: #c6c6c6;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+}
+.next-information .dropdown-menu{
+  padding: 0px;
+  position: relative;
+  margin: 1.0rem 0 0;
+}
+.next-information .dropdown-menu::before,
+.next-information .dropdown-menu::after{
+  content: '';
+  display: block;
+  position: absolute;
+  right: 15px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  z-index: 1;
+}
+.next-information .dropdown-menu::after{
+  top: -18px;
+  border-color: transparent transparent #ffffff transparent;
+  border-width: 9px;
+  z-index: 1;
+}
+.next-information .dropdown-menu::before{
+  top: -19px;
+  border-color: transparent transparent #d3d3d3 transparent;
+  border-width: 9px;
+  z-index: 1;
+}
+.next-information .dropdown-menu a.details-link{
+  font-size: 14px;
+  background: #f8f8f8;
+  color: #00aec8;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.next-information .dropdown-menu a.remove-link{
+  font-size: 14px;
+  background: #ffffff;
+  color: #ff555a;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
 /* End Detail Pesanan */
 
 /* Footer */
@@ -1435,6 +1504,7 @@ ul li{
 .newsletter{
   background: #f8f8f8;
   padding: 30px 0px;
+  border-top: 1px solid #cbcbcb;
 }
 .newsletter label{
   color: #333333;
