--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1584,6 +1584,9 @@ p.tojoe::before{
 .seemore a{
   font-size: 14px;
 }
+.logo-plane span{
+  color: #959595;
+}
 /* End Settings Booking */
 
 /* Footer */
