--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,6 +128,9 @@ header{
 }
 header nav.bg-light{
   padding: 16px 0px;
+  -webkit-box-shadow: 0px 4px 3px 0px rgba(221,221,221,0.63);
+  -moz-box-shadow: 0px 4px 3px 0px rgba(221,221,221,0.63);
+  box-shadow: 0px 4px 3px 0px rgba(221,221,221,0.63);
 }
 header ul.navbar-nav {
   display: block;
